Contentful asset URL changes:
images.contentful.com → images.ctfassets.net
assets.contentful.com → assets.ctfassets.net
downloads.contentful.com → downloads.ctfassets.net
videos.contentful.com → videos.ctfassets.net

https://www.contentful.com/blog/2017/12/08/change-of-the-contentful-asset-domain/

--- a/source/404.html.erb
+++ b/source/404.html.erb
@@ -4,10 +4,10 @@ summary: "404 Page Not Found"
 author: "Datica, Inc."
 tags: "lost, deserts, wandering, searching, finding, trekking, journeys, exploration, rambling, meandering"
 date: "January 1, 2017"
-share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 layout: "basic"
 customCSS: "discover"
-bgImage: "//images.contentful.com/189dvqdsjh46/4YMziFy6JGi6iKwsskImEG/1074c45f366e78ed5666841f9b1ba3dd/walking_on_Sand_Dunes__color__dark__andrew-deslauriers-269459.jpg"
+bgImage: "//images.ctfassets.net/189dvqdsjh46/4YMziFy6JGi6iKwsskImEG/1074c45f366e78ed5666841f9b1ba3dd/walking_on_Sand_Dunes__color__dark__andrew-deslauriers-269459.jpg"
 ---
 <div class="container-color--dark-alt">
     <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
