--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -9,7 +9,7 @@ customCSS: "about-us"
 layout: company
 ---
 
-<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.contentful.com/189dvqdsjh46/3eF64DVasUAAKacOwWqmce/f63c1ea700487b2d8bda2a8110fac69e/background-about-us.jpg, small]">
+<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/3eF64DVasUAAKacOwWqmce/f63c1ea700487b2d8bda2a8110fac69e/background-about-us.jpg, small]">
     <div class="row align-center">
         <div class="columns small-12 large-8 text-center">
             <h4 class="headline-6 subheader--spaced-out text--yellow-glow">About Us</h4>
@@ -45,13 +45,13 @@ layout: company
                     <p>Datica is the <a href="/platform">digital health platform</a> powering the next era of healthcare technology. In a post-EHR world, technology focused on outcomes will be brought together with the patient at the center. Those businesses and tools, innovations and technologies need a platform to enable the cloud, resolve compliance, facilitate interoperability, and enact security. Datica is that platform.</p>
                 </div>
                 <div class="block">
-                    <img class="hitrust-logo" src="https://images.contentful.com/189dvqdsjh46/tPI7wEI7zaSEQ2cu6MqOc/7f837591f0a7f85448180a4a1e61158d/logo-hitrust-certified.png" alt="HITRUST Logo">
+                    <img class="hitrust-logo" src="https://images.ctfassets.net/189dvqdsjh46/tPI7wEI7zaSEQ2cu6MqOc/7f837591f0a7f85448180a4a1e61158d/logo-hitrust-certified.png" alt="HITRUST Logo">
                     <h4 class="inline-highlight">How We Do It</h4>
                     <h2>Healthcare's HITRUST CSF Certified Cloud</h2>
                     <p>Datica provides <a href="/discover/hipaa-compliance">HIPAA compliant</a>, <a href="/discover/hitrust">HITRUST CSF Certified</a> <a href="/discover/healthcare-cloud">cloud-based infrastructure</a> for developers across healthcare. We relieve the burden of compliance so teams can focus on bettering patient outcomes, and think compliance should be the last thing <a href="/innovation">innovators</a> think about. Our approach to <a href="/discover/ehr-integrations">integration</a> removes interoperability as a barrier while creating a trusted networked world using open standards.</p>
                 </div>
                 <div class="block">
-                    <img class="hlseven-logo" src="https://images.contentful.com/189dvqdsjh46/4YL9rurq768KqacKu6Wouy/7ced63f7c3c07ca11604fa436e32efcf/hl7-membership-gold.png" alt="HL7 Logo">
+                    <img class="hlseven-logo" src="https://images.ctfassets.net/189dvqdsjh46/4YL9rurq768KqacKu6Wouy/7ced63f7c3c07ca11604fa436e32efcf/hl7-membership-gold.png" alt="HL7 Logo">
                     <h4 class="inline-highlight">How We Create Value</h4>
                     <h2>Integration Breeds Innovation</h2>
                     <p>We believe connection is key to bettering patient outcomes. Health system administrators functionally innovate through rapid prototyping of internal projects or assimilation of external solutions to real problems. Integration accelerates innovation because powerful ideas have little impact until they are first-class citizens of the health information system.</p>
@@ -77,7 +77,7 @@ layout: company
                     </div>
                     <span class="dot"></span>
                     <div class="content">
-                        <p>Company is originally founded as <img class="inline-image" src="https://images.contentful.com/189dvqdsjh46/5PZUCpxbZmkYOi88eqKmmw/0f315e291f02614dd83746c80e936c71/logo-catalyze-blue.svg" alt="Catalyze"> by <a href="/about/travis">Travis Good, MD</a>, and Mohan Balachandran, two friends focused on helping healthcare transition to value-based patient care.</p>
+                        <p>Company is originally founded as <img class="inline-image" src="https://images.ctfassets.net/189dvqdsjh46/5PZUCpxbZmkYOi88eqKmmw/0f315e291f02614dd83746c80e936c71/logo-catalyze-blue.svg" alt="Catalyze"> by <a href="/about/travis">Travis Good, MD</a>, and Mohan Balachandran, two friends focused on helping healthcare transition to value-based patient care.</p>
                     </div>
                 </div>
                 <div class="block">
@@ -95,7 +95,7 @@ layout: company
                     </div>
                     <span class="dot"></span>
                     <div class="content">
-                        <p>Blue Shield California and The Department of Veterans Affairs become customers, establishing Catalyze as a <a href="/platform/success">trusted partner</a>.<br><img class="inlineblock-image" src="https://images.contentful.com/189dvqdsjh46/3S68s3zk0EwaQEIQwmiuwK/358f5410339787b8458b492b67ff4ca3/va-logo.png" alt="Dept. of Veteran Affairs"><img class="inlineblock-image" src="https://images.contentful.com/189dvqdsjh46/z5mgVS11sWgcCgA4ekyAU/0bf920ed7818628540640555292bbd1a/bsc-logo-wide.png" alt="Blue Shield of California"></p>
+                        <p>Blue Shield California and The Department of Veterans Affairs become customers, establishing Catalyze as a <a href="/platform/success">trusted partner</a>.<br><img class="inlineblock-image" src="https://images.ctfassets.net/189dvqdsjh46/3S68s3zk0EwaQEIQwmiuwK/358f5410339787b8458b492b67ff4ca3/va-logo.png" alt="Dept. of Veteran Affairs"><img class="inlineblock-image" src="https://images.ctfassets.net/189dvqdsjh46/z5mgVS11sWgcCgA4ekyAU/0bf920ed7818628540640555292bbd1a/bsc-logo-wide.png" alt="Blue Shield of California"></p>
                     </div>
                 </div>
                 <div class="block">
@@ -149,7 +149,7 @@ layout: company
                     </div>
                     <span class="dot"></span>
                     <div class="content">
-                        <p>Catalyze evolves its managed integration services and launches <img class="inline-image" src="https://images.contentful.com/189dvqdsjh46/5BYpvv1iZGSaiG2QywEmeU/17e4ad74de3d06446b27c175e83ad7fd/logo-redpoint.svg" alt="Managed Integration"></p>
+                        <p>Catalyze evolves its managed integration services and launches <img class="inline-image" src="https://images.ctfassets.net/189dvqdsjh46/5BYpvv1iZGSaiG2QywEmeU/17e4ad74de3d06446b27c175e83ad7fd/logo-redpoint.svg" alt="Managed Integration"></p>
                     </div>
                 </div>
                 <div class="block">
@@ -158,7 +158,7 @@ layout: company
                     </div>
                     <span class="dot"></span>
                     <div class="content">
-                        <p>Catalyze broadens availability of Platform as a Service to enterprise healthcare vendors and health systems, relaunches as <img class="inline-image" src="https://images.contentful.com/189dvqdsjh46/eFriQIoYbCOSQsguke6wq/9503da598af5c2c134832f9a667416a5/logo-stratum.svg" alt="Compliant Cloud"></p>
+                        <p>Catalyze broadens availability of Platform as a Service to enterprise healthcare vendors and health systems, relaunches as <img class="inline-image" src="https://images.ctfassets.net/189dvqdsjh46/eFriQIoYbCOSQsguke6wq/9503da598af5c2c134832f9a667416a5/logo-stratum.svg" alt="Compliant Cloud"></p>
                     </div>
                 </div>
                 <div class="block">
@@ -203,13 +203,13 @@ layout: company
 </section>
 <section class="row full-width collapse">
     <div class="columns small-6 medium-4 show-for-medium">
-        <img src="https://images.contentful.com/189dvqdsjh46/2SMG75tdbiKqW0A8gEAQkU/18da5240275aa4ff34cffa83a61b3932/datica-nook-with-graphic-wall-print.jpg?fit=thumb&w=800&h=600&q=70" alt="Datica Life">
+        <img src="https://images.ctfassets.net/189dvqdsjh46/2SMG75tdbiKqW0A8gEAQkU/18da5240275aa4ff34cffa83a61b3932/datica-nook-with-graphic-wall-print.jpg?fit=thumb&w=800&h=600&q=70" alt="Datica Life">
     </div>
     <div class="columns small-6 medium-4">
-        <img src="https://images.contentful.com/189dvqdsjh46/36mtVNnzTa6osewKmQQ6cQ/867f9b8131320cc64f98aa4b11bb371b/Catalyze_All-Hands_March_2016_005.jpg?fit=thumb&w=800&h=600&q=70" alt="Datica Life">
+        <img src="https://images.ctfassets.net/189dvqdsjh46/36mtVNnzTa6osewKmQQ6cQ/867f9b8131320cc64f98aa4b11bb371b/Catalyze_All-Hands_March_2016_005.jpg?fit=thumb&w=800&h=600&q=70" alt="Datica Life">
     </div>
     <div class="columns small-6 medium-4">
-        <img src="https://images.contentful.com/189dvqdsjh46/3dS5k3WuZG800qKYs0W48W/8f9db566386b52ab3eeb4e96c2a97c4a/datica_team_-_hall_chat_2_P1040676.jpg?fit=thumb&w=800&h=600&q=70" alt="Datica Office">
+        <img src="https://images.ctfassets.net/189dvqdsjh46/3dS5k3WuZG800qKYs0W48W/8f9db566386b52ab3eeb4e96c2a97c4a/datica_team_-_hall_chat_2_P1040676.jpg?fit=thumb&w=800&h=600&q=70" alt="Datica Office">
     </div>
 </section>
 <section class="section-article container-color--gray-light">
@@ -226,10 +226,10 @@ layout: company
         <div class="columns small-12 medium-8 text-center">
             <h2 class="headline-3">A Strong Backing</h2>
             <div class="row small-up-2 medium-up-4 align-middle">
-                <div class="column"><img class="logo-size--large" src="https://images.contentful.com/189dvqdsjh46/4cObssAG4goygs6kYoggm6/125b40ff261847103d0d9c9fc22d4393/av-logo.png?h=60" alt="Arthur Ventures"></div>
-                <div class="column"><img class="logo-size--large" src="https://images.contentful.com/189dvqdsjh46/54MNeLPfOM68gyIya8sySU/1ae051e26424b0888c0bb93d8d3ba0b3/bc-logo.png?h=60" alt="Baird Ventures"></div>
-                <div class="column"><img class="logo-size--large" src="https://images.contentful.com/189dvqdsjh46/4BIGV3EJ9SmayOc8YOyeui/f38bf67be633f330fa5470de6e55bd34/cv-logo.png?h=60" alt="Chicago Ventures"></div>
-                <div class="column"><img class="logo-size--large" src="https://images.contentful.com/189dvqdsjh46/6bhxfVnDKEUmWcC28Esk4I/9ff2c80e24438b3356e58470f9b61f9f/lavc-logo.png?h=60" alt="Lewis and Clark Ventures"></div>
+                <div class="column"><img class="logo-size--large" src="https://images.ctfassets.net/189dvqdsjh46/4cObssAG4goygs6kYoggm6/125b40ff261847103d0d9c9fc22d4393/av-logo.png?h=60" alt="Arthur Ventures"></div>
+                <div class="column"><img class="logo-size--large" src="https://images.ctfassets.net/189dvqdsjh46/54MNeLPfOM68gyIya8sySU/1ae051e26424b0888c0bb93d8d3ba0b3/bc-logo.png?h=60" alt="Baird Ventures"></div>
+                <div class="column"><img class="logo-size--large" src="https://images.ctfassets.net/189dvqdsjh46/4BIGV3EJ9SmayOc8YOyeui/f38bf67be633f330fa5470de6e55bd34/cv-logo.png?h=60" alt="Chicago Ventures"></div>
+                <div class="column"><img class="logo-size--large" src="https://images.ctfassets.net/189dvqdsjh46/6bhxfVnDKEUmWcC28Esk4I/9ff2c80e24438b3356e58470f9b61f9f/lavc-logo.png?h=60" alt="Lewis and Clark Ventures"></div>
             </div>
         </div>
     </div>
