--- a/source/contentful_templates/discover.html.erb
+++ b/source/contentful_templates/discover.html.erb
@@ -179,7 +179,7 @@ end
 
             <div class="row align-center">
                 <div class="columns small-12 medium-3 large-2 show-for-medium">
-                    <img class="group" alt="Datica Whitepapers" data-interchange="[https://images.contentful.com/189dvqdsjh46/4OxiTrPw4MY68q6iuwgoKE/184587a2732fe2eae7871918da9a6028/art-whitepapers-bulb.png, small]">
+                    <img class="group" alt="Datica Whitepapers" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/4OxiTrPw4MY68q6iuwgoKE/184587a2732fe2eae7871918da9a6028/art-whitepapers-bulb.png, small]">
                 </div>
                 <div class="columns small-12 medium-9 large-8">
                     <h3 class="discover--section-header"><%= p["title"] %>: <span class="discover--category">White Papers</span></h3>
@@ -209,7 +209,7 @@ end
             </div>
             <div class="row align-center">
                 <div class="columns small-12 medium-3 large-3 text-center">
-                    <img class="group" alt="Datica Guides" data-interchange="[https://images.contentful.com/189dvqdsjh46/2zqo1GLqz6uAOgSCMe4aoc/ae9ed493b7dc700d63aad63b57689562/Guide_-_integration_featured_image.png?w=150, small], [https://images.contentful.com/189dvqdsjh46/2zqo1GLqz6uAOgSCMe4aoc/ae9ed493b7dc700d63aad63b57689562/Guide_-_integration_featured_image.png?w=400, medium]">
+                    <img class="group" alt="Datica Guides" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/2zqo1GLqz6uAOgSCMe4aoc/ae9ed493b7dc700d63aad63b57689562/Guide_-_integration_featured_image.png?w=150, small], [https://images.ctfassets.net/189dvqdsjh46/2zqo1GLqz6uAOgSCMe4aoc/ae9ed493b7dc700d63aad63b57689562/Guide_-_integration_featured_image.png?w=400, medium]">
                 </div>
                 <div class="columns small-12 medium-9 large-8">
                 <% p["related_guides"].each do |post| %>
