--- a/source/contentful_templates/report.html.erb
+++ b/source/contentful_templates/report.html.erb
@@ -100,7 +100,7 @@ end
 <% if p.has_key?("bg_image") %>
     <section class="section-article container-image-fill" data-interchange="[<%= p.bg_image.url %>?fit=thumb&w=1800&h=200&fm=jpg&q=50, medium]">
 <% else %>
-    <section class="container-gray-5 container-image--fixed" data-interchange="[//images.contentful.com/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?w=1200&q=50, large]">
+    <section class="container-gray-5 container-image--fixed" data-interchange="[//images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?w=1200&q=50, large]">
 <% end %>
     <% if p.has_key?("cta_ref") %>
         <div class="row align-center">
