--- a/source/dhsf/index.html.erb
+++ b/source/dhsf/index.html.erb
@@ -4,7 +4,7 @@ summary: "We've simplified the unique complexities of the digital healthcare spa
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "July 12, 2017"
-share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 layout: sparse
 customCSS: "dhsf"
 customJS: "/public/js/dhsf.js"
@@ -205,7 +205,7 @@ customJS: "/public/js/dhsf.js"
                 </div>
                 <div class="group text-center">
                     <a href="https://datica.com/guide/digital-health-success-framework-ebook/" title="Download your ebook">
-                        <img src="https://images.contentful.com/189dvqdsjh46/2q4JydYcuAgSQ6SKmy88US/47ce92d94666f955ab2ef252297fa838/dhsf-report-preview.png?w=500" alt="DHSF Ebook" class="group">
+                        <img src="https://images.ctfassets.net/189dvqdsjh46/2q4JydYcuAgSQ6SKmy88US/47ce92d94666f955ab2ef252297fa838/dhsf-report-preview.png?w=500" alt="DHSF Ebook" class="group">
                     </a>
                     <!-- <h3 class="headline-4">Get your free DHSF ebook</h3> -->
                     <a class="button hollow hollow-inverted" href="/guide/digital-health-success-framework-ebook/" title="Download your ebook">Get your free DHSF ebook today</a>
