--- a/source/innovation/index.html.erb
+++ b/source/innovation/index.html.erb
@@ -4,13 +4,13 @@ summary: "How does healthcare innovate? Datica explores this topic through new s
 author: "Datica, Inc."
 tags: "HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "January 1, 2017"
-share_image: "https://images.contentful.com/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/bc7605c8d6702518cedcedf7cf0de3bb/podcast-art-share-2018.png"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/bc7605c8d6702518cedcedf7cf0de3bb/podcast-art-share-2018.png"
 header: "Datica Innovation"
 subheader: "How does healthcare innovate? Datica explores this topic in a new series of interviews with the industry's top thinkers and doers. Follow along with us as we uncover insights to catalyzing change in healthcare."
 layout: basic
 customCSS: "innovation"
 ---
-<div class="container-gray-5 container-image--fixed" data-interchange="[//images.contentful.com/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?fit=thumb&w=800&h=800&q=40, small], [//images.contentful.com/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?w=1200&q=50, large]">
+<div class="container-gray-5 container-image--fixed" data-interchange="[//images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?fit=thumb&w=800&h=800&q=40, small], [//images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?w=1200&q=50, large]">
     <div class="container-color--tint-70">
         <!-- <div class="container-color--dark-alt container-image--bottom" data-interchange="[/public/img/art/art-sound-bars-bg.svg, small]"> -->
         <%= partial "partials/snippets/header", :locals => { :style => "light" } %>
@@ -28,7 +28,7 @@ customCSS: "innovation"
     :locals => {
         :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS",
         :container_color => "container-gray-10"
-        #:background => "https://images.contentful.com/189dvqdsjh46/55EpUazd5CQSqC66CaWYqI/fd3aa1534d8d641ee8bd60d3592e98a3/aws-mlh-diagram-k-alpha.png"
+        #:background => "https://images.ctfassets.net/189dvqdsjh46/55EpUazd5CQSqC66CaWYqI/fd3aa1534d8d641ee8bd60d3592e98a3/aws-mlh-diagram-k-alpha.png"
     }
 %>
 <%= partial "/partials/section-promos/leadership-gallery" %>
@@ -70,7 +70,7 @@ customCSS: "innovation"
     </div>
 </section>
     <% sorted_podcasts = data.site.podcast.to_a.sort_by{ |id, podcast| podcast['pub_date'] }.reverse! %>
-    <section data-magellan-target="discoverInnovation" id="discoverInnovation" class="discover--podcast section-article container-color--dark-alt container-image--middle" data-interchange="[https://images.contentful.com/189dvqdsjh46/19d5iulqaYg8ACWcYQ6Im6/3f883ec8f77add5b22a497e3b3d63e6d/art-sound-bars-purple.svg, small]">
+    <section data-magellan-target="discoverInnovation" id="discoverInnovation" class="discover--podcast section-article container-color--dark-alt container-image--middle" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/19d5iulqaYg8ACWcYQ6Im6/3f883ec8f77add5b22a497e3b3d63e6d/art-sound-bars-purple.svg, small]">
         <div class="row align-center collapse">
             <div class="columns small-12 large-10">
                 <h3 class="innovation--section-header">Healthcare Innovators <span class="innovation--category">Podcast</span></h3>
