--- a/source/innovation/leadership-gallery.html.erb
+++ b/source/innovation/leadership-gallery.html.erb
@@ -4,7 +4,7 @@ summary: "We have collected a host of expansive, useful, and original insights a
 author: "Datica, Inc."
 tags: "healthcare, leadership, innovation"
 date: "August 1, 2017"
-share_image: "https://images.contentful.com/189dvqdsjh46/6narHoNofSE0WosSoisscK/a2269efd27d6083468dd995c92e1408f/Leadership_Gallery_Vol._1_Introduction_poster.jpg??w=640&q=60"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/6narHoNofSE0WosSoisscK/a2269efd27d6083468dd995c92e1408f/Leadership_Gallery_Vol._1_Introduction_poster.jpg??w=640&q=60"
 header: "Datica Thought Leadership Gallery"
 subheader: "subheader"
 layout: sparse
@@ -102,7 +102,7 @@ sorted_entries = data.site.leadershipGallery.to_a.sort_by{ |id, entry| entry['ti
                     <a href="#intro" title="Introduction">
                         <div class="lg-nav--item__leader">
                             <div class="media-object card-person">
-                                <div class="media-object-section media-object--avatar"><img src="//images.contentful.com/189dvqdsjh46/yDosmOKtaKaeqgYWQoASy/a73851375766f82f4f24922b57e6caf2/prof-travis.jpg?f=face&amp;fit=thumb&amp;w=250&amp;q=45" class="avatar avatar--large circle" alt="Travis Good, MD"></div>
+                                <div class="media-object-section media-object--avatar"><img src="//images.ctfassets.net/189dvqdsjh46/yDosmOKtaKaeqgYWQoASy/a73851375766f82f4f24922b57e6caf2/prof-travis.jpg?f=face&amp;fit=thumb&amp;w=250&amp;q=45" class="avatar avatar--large circle" alt="Travis Good, MD"></div>
                                 <div class="media-object-section media-object--info main-section align-self-middle">
                                     <h3 class="headline-5">Introduction</h3>
                                     <h4 class="person-name">
@@ -153,7 +153,7 @@ sorted_entries = data.site.leadershipGallery.to_a.sort_by{ |id, entry| entry['ti
                                         <p>Rapid innovation in technology and data is transforming healthcare before our very eyes. This compilation of ideas and resources on healthcare innovation will help you be in the know.</p>
                                     </div>
                             </div>
-                            <div class="callout--article-image container-image--center" data-interchange="[//images.contentful.com/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?fit=scale&w=300&h=150&q=30, small], [//images.contentful.com/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?fit=scale&w=400&h=200&q=45, medium]" style="background-image: url(//images.contentful.com/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?fit=scale&w=400&h=200&q=45);"></div>
+                            <div class="callout--article-image container-image--center" data-interchange="[//images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?fit=scale&w=300&h=150&q=30, small], [//images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?fit=scale&w=400&h=200&q=45, medium]" style="background-image: url(//images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?fit=scale&w=400&h=200&q=45);"></div>
                         </a>
                     </div>
                     <hr class="content">
