--- a/source/innovation/partials/_subscribe.erb
+++ b/source/innovation/partials/_subscribe.erb
@@ -9,19 +9,19 @@
 <div class="row collapse">
     <div class="small-12 columns text-center">
         <a href="https://itunes.apple.com/us/podcast/healthcare-innovators-podcast/id1118068234" title="Subscribe in iTunes">
-            <img class="logo-basic" src="//images.contentful.com/189dvqdsjh46/it9jQssFYOsG2G8UmaMKA/6c5755139dde05f5d3655d9db0635cc8/logo-itunes.png" alt="subscribe"/>
+            <img class="logo-basic" src="//images.ctfassets.net/189dvqdsjh46/it9jQssFYOsG2G8UmaMKA/6c5755139dde05f5d3655d9db0635cc8/logo-itunes.png" alt="subscribe"/>
         </a>
 
         <a href="https://soundcloud.com/catalyze-io" title="Listen in soundcloud">
-            <img class="logo-basic" src="//images.contentful.com/189dvqdsjh46/5OJKDhxQsMKsW2gcSKAyOE/a0f87e4b72c180f64bf24347950cf98e/logo-soundcloud.png" alt="subscribe"/>
+            <img class="logo-basic" src="//images.ctfassets.net/189dvqdsjh46/5OJKDhxQsMKsW2gcSKAyOE/a0f87e4b72c180f64bf24347950cf98e/logo-soundcloud.png" alt="subscribe"/>
         </a>
 
         <a href="http://www.stitcher.com/s?fid=91339&refid=stpr" title="Subscribe with Stitcher">
-            <img class="logo-basic" src="//images.contentful.com/189dvqdsjh46/4zPUHPDjrGMa4UCKmso8ss/ec71cdd18e29639d0dd3f1858530b4af/logo-stitcher.png" alt="subscribe"/>
+            <img class="logo-basic" src="//images.ctfassets.net/189dvqdsjh46/4zPUHPDjrGMa4UCKmso8ss/ec71cdd18e29639d0dd3f1858530b4af/logo-stitcher.png" alt="subscribe"/>
         </a>
 
         <a href="https://goo.gl/app/playmusic?ibi=com.google.PlayMusic&isi=691797987&ius=googleplaymusic&link=https://play.google.com/music/m/Ivinlhscpcxt4ovbaqla72swlru?t%3DHealthcare_Innovators_Podcast" title="Google Play">
-            <img class="logo-basic" src="//images.contentful.com/189dvqdsjh46/2oUStfC3QEm4uSouyK4M6Y/5273b9289e3d993ceb93ae97c23c8af0/logo-googleplay.png" alt="subscribe"/>
+            <img class="logo-basic" src="//images.ctfassets.net/189dvqdsjh46/2oUStfC3QEm4uSouyK4M6Y/5273b9289e3d993ceb93ae97c23c8af0/logo-googleplay.png" alt="subscribe"/>
         </a>
     </div>
 </div>
