--- a/source/leadership/index.html.erb
+++ b/source/leadership/index.html.erb
@@ -3,7 +3,7 @@ title: "Datica Leadership Team"
 summary: "The leadership team behind Datica"
 author: "Datica, Inc."
 tags: "leadership, strategy, people"
-share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 # customCSS: "leadership"
 layout: basic
 ---
@@ -35,7 +35,7 @@ sorted_daticans  = data.site.person.to_a.sort_by{ |id, person| person['slug'] }
         </div>
     </div>
 </section>
-<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.contentful.com/189dvqdsjh46/3eF64DVasUAAKacOwWqmce/f63c1ea700487b2d8bda2a8110fac69e/background-about-us.jpg, small]">
+<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/3eF64DVasUAAKacOwWqmce/f63c1ea700487b2d8bda2a8110fac69e/background-about-us.jpg, small]">
     <div class="row align-center">
         <div class="columns small-12 large-6 text-center">
             <h4 class="headline-6 subheader--spaced-out text--yellow-glow">Leadership</h4>
