--- a/source/open-source/index.html.erb
+++ b/source/open-source/index.html.erb
@@ -4,7 +4,7 @@ summary: "Building the future of healthcare together"
 author: "Datica, Inc. Engineering Team"
 tags: "open source, OSS, policies, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "January 1, 2017"
-share_image: "https://images.contentful.com/189dvqdsjh46/29pEL9FKGwmQ6GMKaeKmKc/f882650ba0219b6f9e35b8da68c95dab/open-source-2-share.jpg?w=1200"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/29pEL9FKGwmQ6GMKaeKmKc/f882650ba0219b6f9e35b8da68c95dab/open-source-2-share.jpg?w=1200"
 customCSS: "about-us"
 layout: "company"
 ---
