--- a/source/partials/ctas/_ad-webinar.erb
+++ b/source/partials/ctas/_ad-webinar.erb
@@ -1,6 +1,6 @@
 <%
-banner_small = "https://images.contentful.com/189dvqdsjh46/2rm8elo7eYo0M2Y6oQaau2/c52b09c6b159f616dfa76d7d6cd7cfc5/cta-webinar-oci-mirth-1-ad-share.jpg?w=700"
-banner_wide = "https://images.contentful.com/189dvqdsjh46/1lG3yUYayw6QaecUo4eOK2/23b2806ea2bce848d6bda9f99a868288/webinar-oci-mirth-1-banner-wide.jpg"
+banner_small = "https://images.ctfassets.net/189dvqdsjh46/2rm8elo7eYo0M2Y6oQaau2/c52b09c6b159f616dfa76d7d6cd7cfc5/cta-webinar-oci-mirth-1-ad-share.jpg?w=700"
+banner_wide = "https://images.ctfassets.net/189dvqdsjh46/1lG3yUYayw6QaecUo4eOK2/23b2806ea2bce848d6bda9f99a868288/webinar-oci-mirth-1-banner-wide.jpg"
 %>
 
 <aside class="cta cta--image">
