--- a/source/partials/ctas/_dhsf-video.html.erb
+++ b/source/partials/ctas/_dhsf-video.html.erb
@@ -1,3 +1,3 @@
-<video src="https://videos.contentful.com/189dvqdsjh46/4n56caAOcEIwoc6me82Me4/5c2cb82cdff837ef83e7eb19bf8533ff/dhsf-promo-loop.mp4" autoplay poster="https://images.contentful.com/189dvqdsjh46/6KUM2EQZuE0e26qUysGS0e/bb2d24d7d99be25a8e875262e74044d5/dhsf-promo-poster.png">
+<video src="https://videos.ctfassets.net/189dvqdsjh46/4n56caAOcEIwoc6me82Me4/5c2cb82cdff837ef83e7eb19bf8533ff/dhsf-promo-loop.mp4" autoplay poster="https://images.ctfassets.net/189dvqdsjh46/6KUM2EQZuE0e26qUysGS0e/bb2d24d7d99be25a8e875262e74044d5/dhsf-promo-poster.png">
 How can the Digital Health System Framework help you? <a href="/dhsf">Find out</a>.
 </video>
