--- a/source/partials/section-promos/_careers.erb
+++ b/source/partials/section-promos/_careers.erb
@@ -1,6 +1,6 @@
 
 <%
-bg_image = "https://images.contentful.com/189dvqdsjh46/4KnuEp6gDe2MwOIqIKuKUk/66b11ef15d7a8bcc0dd174a6a5279043/datica_team_-_hall_chat_2_P1040676.jpg"
+bg_image = "https://images.ctfassets.net/189dvqdsjh46/4KnuEp6gDe2MwOIqIKuKUk/66b11ef15d7a8bcc0dd174a6a5279043/datica_team_-_hall_chat_2_P1040676.jpg"
 unless defined?(tagline)
 	tagline = "We're building a team to transform healthcare. Join us!"
 end
