--- a/source/partials/section-promos/_dhsf-video.erb
+++ b/source/partials/section-promos/_dhsf-video.erb
@@ -1,6 +1,6 @@
 <section class="section-article bg-video--container">
-    <video id="vid-dhsf" class="bg-video" poster="https://images.contentful.com/189dvqdsjh46/6KUM2EQZuE0e26qUysGS0e/bb2d24d7d99be25a8e875262e74044d5/dhsf-promo-poster.png" playsinline autoplay muted loop>
-        <source src="https://videos.contentful.com/189dvqdsjh46/6BrpQ15XKEQ86qkAQ4mOCW/8e6faf1d60ab2fe2a979155f2f896e0b/dhsf-ad-loop-lo.mp4" type="video/mp4">
+    <video id="vid-dhsf" class="bg-video" poster="https://images.ctfassets.net/189dvqdsjh46/6KUM2EQZuE0e26qUysGS0e/bb2d24d7d99be25a8e875262e74044d5/dhsf-promo-poster.png" playsinline autoplay muted loop>
+        <source src="https://videos.ctfassets.net/189dvqdsjh46/6BrpQ15XKEQ86qkAQ4mOCW/8e6faf1d60ab2fe2a979155f2f896e0b/dhsf-ad-loop-lo.mp4" type="video/mp4">
     </video>
     <div class="row<% if defined?(align) && align == "right" %> align-right<% end %>">
         <div class="columns small-12 medium-6">
@@ -11,7 +11,7 @@
         </div>
     </div>
 </section>
-<style media="screen">.bg-video{position:absolute;top:50%;left:50%;min-width:100%;min-height:100%;opacity:0.3;width:auto;height:auto;z-index:-100;transform:translateX(-50%) translateY(-50%);background:url("https://images.contentful.com/189dvqdsjh46/6KUM2EQZuE0e26qUysGS0e/bb2d24d7d99be25a8e875262e74044d5/dhsf-promo-poster.png") no-repeat;background-size:contain;transition:1s opacity}.bg-video--container{position:relative;overflow:hidden}</style>
+<style media="screen">.bg-video{position:absolute;top:50%;left:50%;min-width:100%;min-height:100%;opacity:0.3;width:auto;height:auto;z-index:-100;transform:translateX(-50%) translateY(-50%);background:url("https://images.ctfassets.net/189dvqdsjh46/6KUM2EQZuE0e26qUysGS0e/bb2d24d7d99be25a8e875262e74044d5/dhsf-promo-poster.png") no-repeat;background-size:contain;transition:1s opacity}.bg-video--container{position:relative;overflow:hidden}</style>
 <script type="text/javascript">
     var vid = document.getElementById("vid-dhsf");
     if (window.matchMedia('(prefers-reduced-motion)').matches) {
