--- a/source/partials/section-promos/_hcms-screenshot.slim
+++ b/source/partials/section-promos/_hcms-screenshot.slim
@@ -5,7 +5,7 @@
     h3.headline-2 Extending critical compliance controls
 .row.align-center.align-center
   .columns.small-12.large-10
-    img.group alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/2mbtHnzGTyAayWaeiQqmyk/9f63a21da504f6cb8fc2808a864d13bf/hcms-mockups-2x.png?w=1200" /
+    img.group alt=("HCMS Dashboard") src="https://images.ctfassets.net/189dvqdsjh46/2mbtHnzGTyAayWaeiQqmyk/9f63a21da504f6cb8fc2808a864d13bf/hcms-mockups-2x.png?w=1200" /
 .row.align-center
   .columns.small-12.medium-10.large-8
     .callout.drop
