--- a/source/partials/section-promos/_leadership-gallery.erb
+++ b/source/partials/section-promos/_leadership-gallery.erb
@@ -1,4 +1,4 @@
-<section id="innovation-gallery" class="section-article section--cta-blue container-image--center" data-interchange="[//images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]">
+<section id="innovation-gallery" class="section-article section--cta-blue container-image--center" data-interchange="[//images.ctfassets.net/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]">
     <div class="row align-middle">
         <div class="columns small-12 medium-6">
             <h4 class="subhead--small text--spaced">Leadership Gallery</h4>
