--- a/source/partials/section-promos/_report-q317.erb
+++ b/source/partials/section-promos/_report-q317.erb
@@ -1,8 +1,8 @@
 <%
 if defined?(:style) && style == "dark"
-    bgImage = "https://images.contentful.com/189dvqdsjh46/5iqNkj7WByG4KWsGIAYqmq/20f3eb14d274b744720ff2d32ea1a5a6/clouds_in_arc_building_dark.jpg"
+    bgImage = "https://images.ctfassets.net/189dvqdsjh46/5iqNkj7WByG4KWsGIAYqmq/20f3eb14d274b744720ff2d32ea1a5a6/clouds_in_arc_building_dark.jpg"
 else
-    bgImage = "https://images.contentful.com/189dvqdsjh46/7yUgq2CbIsUwMcAam02mG0/522fb00e1543f53765f43e5eafd8b41a/clouds_-_victor-garcia-329401_edit.jpg"
+    bgImage = "https://images.ctfassets.net/189dvqdsjh46/7yUgq2CbIsUwMcAam02mG0/522fb00e1543f53765f43e5eafd8b41a/clouds_-_victor-garcia-329401_edit.jpg"
 end
 %>
 <section class="section-article container-image--center container-color--gray-light" data-interchange="[<%= bgImage %><%= image_featured_small %>, small], [<%= bgImage %><%= image_featured_medium %>, medium], [<%= bgImage %><%= image_featured_large %>, large]">
