--- a/source/partials/snippets/_alert-ribbon.erb
+++ b/source/partials/snippets/_alert-ribbon.erb
@@ -15,6 +15,6 @@
 	</div>
 </aside>
 <%
-# <aside id="alertTop" class="hide full-width container-color--blue-alt alert-ribbon container-image--center" data-closable data-interchange="[https://images.contentful.com/189dvqdsjh46/55i8F0QfygcMwAwyUEWoug/8a1254b14cd2b239dbf1f1d178459115/webinar_bg_-_leaf__maroon.jpg?fit=crop&w=2400&h=40&q=60, large]">
-# <!-- <img class="alert-ribbon--content" src="https://images.contentful.com/189dvqdsjh46/4RVpVLiSjKU00EUom04mKU/e36804be810fb3c3ff8a24d65426cafc/webinar-oci-mirth-1-ribbon__2x.jpg" alt="Webinar - OCI Mirth - December 15"> -->
+# <aside id="alertTop" class="hide full-width container-color--blue-alt alert-ribbon container-image--center" data-closable data-interchange="[https://images.ctfassets.net/189dvqdsjh46/55i8F0QfygcMwAwyUEWoug/8a1254b14cd2b239dbf1f1d178459115/webinar_bg_-_leaf__maroon.jpg?fit=crop&w=2400&h=40&q=60, large]">
+# <!-- <img class="alert-ribbon--content" src="https://images.ctfassets.net/189dvqdsjh46/4RVpVLiSjKU00EUom04mKU/e36804be810fb3c3ff8a24d65426cafc/webinar-oci-mirth-1-ribbon__2x.jpg" alt="Webinar - OCI Mirth - December 15"> -->
 %>
