--- a/source/partials/snippets/_footer.erb
+++ b/source/partials/snippets/_footer.erb
@@ -23,7 +23,7 @@
             </ul>
             <hr class="content">
             <ul class="list-horiz">
-                <li><img class="logo-size--large" src="https://images.contentful.com/189dvqdsjh46/tPI7wEI7zaSEQ2cu6MqOc/7f837591f0a7f85448180a4a1e61158d/logo-hitrust-certified.png?w=200" alt="HITRUST Certified" />&nbsp;
+                <li><img class="logo-size--large" src="https://images.ctfassets.net/189dvqdsjh46/tPI7wEI7zaSEQ2cu6MqOc/7f837591f0a7f85448180a4a1e61158d/logo-hitrust-certified.png?w=200" alt="HITRUST Certified" />&nbsp;
                 </li>
                 <li><script type='text/javascript' src='https://www.coalfire.com/CMSPages/Coalfire/CertificateSealJS.aspx?cc=248fe0c0-6343-4785-9cb0-0602a6a82a6c'></script>
                 </li>
