--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -21,7 +21,7 @@ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0;
       title chevron-down
       path d=("M4.29 5.19L2.83 6.64 9 12.81l6.17-6.17-1.46-1.45L9 9.9z")
 
-section.section-article.container-color--dark-grad-blue.container-image--center(data-interchange="[https://images.contentful.com/189dvqdsjh46/3X0hgoNCSs0Y4KuqEOIqCg/4817329d1d35ec44a08c8767c72fafc3/bg-circles-blue-dark.png?w=1600&h=1600&fit=crop, medium]")
+section.section-article.container-color--dark-grad-blue.container-image--center(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/3X0hgoNCSs0Y4KuqEOIqCg/4817329d1d35ec44a08c8767c72fafc3/bg-circles-blue-dark.png?w=1600&h=1600&fit=crop, medium]")
   .row.align-center
     .columns.small-12
       .row.align-center
@@ -31,21 +31,21 @@ section.section-article.container-color--dark-grad-blue.container-image--center(
       .row.row--card-grid
         .columns.small-12.medium-12.large-4
           .card.drop.container-color--gray-light
-            img src="https://images.contentful.com/189dvqdsjh46/6ydXBtXKRU2Yu0mmsgYCcY/a16c46029da27d0b379fcc69fad5b05b/layer-infra.png" alt="Infrastructure Layer" class="soft-border"
+            img src="https://images.ctfassets.net/189dvqdsjh46/6ydXBtXKRU2Yu0mmsgYCcY/a16c46029da27d0b379fcc69fad5b05b/layer-infra.png" alt="Infrastructure Layer" class="soft-border"
             .card-section
               p.lead.text-center <strong>Infrastructure Layer</strong>
               p AWS and Azure provide VPCs, which cover a portion of compliance and security requirements.
               p Within a VPC, the Datica Platform is installed. Everything within the Platform is strictly managed in adherence to Datica policies. The Platform uses a combination of Kubernetes and proprietary technology to orchestrate all DevOps duties for customers.
         .columns.small-12.medium-12.large-4
           .card.drop.container-color--gray-light
-            img src="https://images.contentful.com/189dvqdsjh46/5cUz9cCIPSCag0CiQi44u4/b450448536c2d754573266b59bd8ea7d/layer-platform.png" alt="Platform Layer" class="soft-border"
+            img src="https://images.ctfassets.net/189dvqdsjh46/5cUz9cCIPSCag0CiQi44u4/b450448536c2d754573266b59bd8ea7d/layer-platform.png" alt="Platform Layer" class="soft-border"
             .card-section
               p.lead.text-center <strong>Platform Layer</strong>
               p Customers create an account within the Datica Platform. It is through the account that they gain access to HIPAA-eligible AWS Primitives or Azure Services, which are strictly controlled by the Platform.
               p Within a customer account, the Platform containerizes all technology required to meet compliance controls from HIPAA, HITRUST, GDPR, and GxP. Things like logging, intrusion detection, and penetration testing, to name a few.
         .columns.small-12.medium-12.large-4
           .card.drop.container-color--gray-light
-            img src="https://images.contentful.com/189dvqdsjh46/6bDMG7j3VYuoYkwEK4OkC2/5fcb3139b6401fbd1262f5f4285fc3a6/layer-app.png" alt="Application Layer" class="soft-border"
+            img src="https://images.ctfassets.net/189dvqdsjh46/6bDMG7j3VYuoYkwEK4OkC2/5fcb3139b6401fbd1262f5f4285fc3a6/layer-app.png" alt="Application Layer" class="soft-border"
             .card-section
               p.lead.text-center <strong>Application Layer</strong>
               p Customers deploy their applications to containerized environments. They can have multiple environments within their Datica account, managing any type of technical use case.
@@ -140,11 +140,11 @@ section.section-article.container-color--gray-light
         p We open sourced our <a href="https://github.com/daticahealth/Mirth-Transforms">Mirth HL7 transformations</a> used over the past three years. With OCI Mirth, you can get started today using these tools. Or, should you require help integrating into a specific hospital, we offer professional services to project manage an integration to completion.
         = partial "partials/snippets/button", :locals => { :label => "Test out your own version of Mirth today", :url => "/pricing", :button_classes => "button text-center", :icon => "icon-chevron-right", :icon_color => "white" }
 
-section.section-article.container-gray-11.container-image--fixed(data-interchange="[https://images.contentful.com/189dvqdsjh46/31Xr7kD9GUu8gYo6IOISac/b72aedc4ed520f1ad4ae78a24109838f/bg-weave-light.png?w=2200&h=1000&fm=jpg, medium]")
+section.section-article.container-gray-11.container-image--fixed(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/31Xr7kD9GUu8gYo6IOISac/b72aedc4ed520f1ad4ae78a24109838f/bg-weave-light.png?w=2200&h=1000&fm=jpg, medium]")
   = partial "partials/section-promos/hcms-screenshot"
 
 /! cta
-section#ctaBottom.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]"
+section#ctaBottom.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.ctfassets.net/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]"
   .row.align-center
     .columns.small-12.medium-10.text-center
       h2.headline-3.group <strong>End-to-end compliance</strong> on AWS and Azure is possible.
