--- a/source/pricing/enterprise.html.erb
+++ b/source/pricing/enterprise.html.erb
@@ -4,7 +4,7 @@ summary: "Request information about the Enterprise Plan on the Datica platform"
 author: "Datica, Inc."
 tags: "growth, developer, application, registration, signup"
 date: "January 1, 2017"
-share_image: "https://images.contentful.com/189dvqdsjh46/80SDxxPlIsygQUCWOowSS/cd68f00dc5c3ef7942a24af04b94c9b2/cta-free-trial-mts.jpg"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/80SDxxPlIsygQUCWOowSS/cd68f00dc5c3ef7942a24af04b94c9b2/cta-free-trial-mts.jpg"
 customCSS: "contact-us"
 customJS: "/public/js/form.js"
 layout: basic
@@ -37,7 +37,7 @@ layout: basic
                 </blockquote>
                 <div class="media-object card-person">
                     <div class="media-object-section">
-                        <img src="https://images.contentful.com/189dvqdsjh46/3MFChiuZUcUC8eoYaaOIoK/183b59fba0ac0f05675ef7cf777fa20c/headshot-healthloop.jpg<%= image_thumb %>" class="avatar avatar--large circle" alt="Mayank Thanawala" />
+                        <img src="https://images.ctfassets.net/189dvqdsjh46/3MFChiuZUcUC8eoYaaOIoK/183b59fba0ac0f05675ef7cf777fa20c/headshot-healthloop.jpg<%= image_thumb %>" class="avatar avatar--large circle" alt="Mayank Thanawala" />
                     </div>
                     <div class="media-object-section main-section align-self-middle">
                         <h4 class="person-name">Mayank Thanawala</h4>
