--- a/source/pricing/growth.html.erb
+++ b/source/pricing/growth.html.erb
@@ -4,7 +4,7 @@ summary: "Request information about the Growth Plan on the Datica platform"
 author: "Datica, Inc."
 tags: "growth, developer, application, registration, signup"
 date: "January 1, 2017"
-share_image: "https://images.contentful.com/189dvqdsjh46/80SDxxPlIsygQUCWOowSS/cd68f00dc5c3ef7942a24af04b94c9b2/cta-free-trial-mts.jpg"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/80SDxxPlIsygQUCWOowSS/cd68f00dc5c3ef7942a24af04b94c9b2/cta-free-trial-mts.jpg"
 customCSS: "contact-us"
 customJS: "/public/js/form.js"
 layout: basic
@@ -36,7 +36,7 @@ layout: basic
                 </blockquote>
                 <div class="media-object card-person">
                     <div class="media-object-section">
-                        <img src="https://images.contentful.com/189dvqdsjh46/4eBm8xpZcIACMoCA2sAe6u/997f730355b2db7e47bfead0e57e6330/headshot-metabahn-bryan.jpg<%= image_thumb %>" class="avatar avatar--large circle" alt="Bryan Powell" />
+                        <img src="https://images.ctfassets.net/189dvqdsjh46/4eBm8xpZcIACMoCA2sAe6u/997f730355b2db7e47bfead0e57e6330/headshot-metabahn-bryan.jpg<%= image_thumb %>" class="avatar avatar--large circle" alt="Bryan Powell" />
                     </div>
                     <div class="media-object-section main-section align-self-middle">
                         <h4 class="person-name">Bryan Powell</h4>
