--- a/source/pricing/old.html.erb
+++ b/source/pricing/old.html.erb
@@ -5,7 +5,7 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "January 1, 2017"
 ogType: "product"
-share_image: "https://images.contentful.com/189dvqdsjh46/80SDxxPlIsygQUCWOowSS/cd68f00dc5c3ef7942a24af04b94c9b2/cta-free-trial-mts.jpg"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/80SDxxPlIsygQUCWOowSS/cd68f00dc5c3ef7942a24af04b94c9b2/cta-free-trial-mts.jpg"
 customCSS: "pricing"
 layout: "sparse"
 ---
@@ -52,7 +52,7 @@ layout: "sparse"
     </div>
 </section>
 
-<%= partial("/partials/section-promos/tco-guide-ribbon", :locals => { :style => "dark", :align => "right", :bgImage => "https://images.contentful.com/189dvqdsjh46/52vT3DpQCcEQMUoiimSmCu/5de61de8155dd3f598394613939ee4b9/eggs_in_basket__tinted__-_autumn-mott-21276.jpg" }) %>
+<%= partial("/partials/section-promos/tco-guide-ribbon", :locals => { :style => "dark", :align => "right", :bgImage => "https://images.ctfassets.net/189dvqdsjh46/52vT3DpQCcEQMUoiimSmCu/5de61de8155dd3f598394613939ee4b9/eggs_in_basket__tinted__-_autumn-mott-21276.jpg" }) %>
 <%# Photo by Autumn Mott on Unsplash  https://unsplash.com/photos/fQabXFgYO7A?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText %>
 
 <section id="faq-pricing" class="section-article">
