--- a/source/seldon/cards.html.erb
+++ b/source/seldon/cards.html.erb
@@ -64,7 +64,7 @@ hide_from_sitemap: true
                             Datica surprised us when they proposed a customized solution; with our previous hosting company it was always – ‘take it or leave it.’
                         </blockquote>
                         <div class="media-object person-small">
-                                <div class="media-object-section"><img src="//images.contentful.com/189dvqdsjh46/3MFChiuZUcUC8eoYaaOIoK/183b59fba0ac0f05675ef7cf777fa20c/headshot-healthloop.jpg?f=face&amp;fit=crop&amp;w=250&amp;q=35" class="avatar avatar--medium circle"></div>
+                                <div class="media-object-section"><img src="//images.ctfassets.net/189dvqdsjh46/3MFChiuZUcUC8eoYaaOIoK/183b59fba0ac0f05675ef7cf777fa20c/headshot-healthloop.jpg?f=face&amp;fit=crop&amp;w=250&amp;q=35" class="avatar avatar--medium circle"></div>
                             <div class="media-object-section main-section align-self-middle">
                                 <h4 class="person-name">Mayank Thanawala</h4>
                                 <p class="person-title">Chief Technology Officer</p>
