--- a/source/seldon/components.html.erb
+++ b/source/seldon/components.html.erb
@@ -14,11 +14,11 @@ hide_from_sitemap: true
         </div>
         <div class="columns small-12 large-4">
             <a data-toggle="reportModal1">
-                <img width="150" src="https://images.contentful.com/189dvqdsjh46/1OrH0GVvn2iAaqGuOMi66U/65b0f7f0407c6229bca3561517303c53/report-infographic-preview-sq.jpg?w=300" alt="Datica Innovation Report">
+                <img width="150" src="https://images.ctfassets.net/189dvqdsjh46/1OrH0GVvn2iAaqGuOMi66U/65b0f7f0407c6229bca3561517303c53/report-infographic-preview-sq.jpg?w=300" alt="Datica Innovation Report">
             </a>
 
             <div class="large reveal" id="reportModal1" data-reveal data-close-on-click="true" data-close-on-esc="true" data-animation-in="fade-in" data-animation-ou="fade-out">
-                <img data-interchange="[https://images.contentful.com/189dvqdsjh46/6ycPF4EFqMcoOWegYGKaKC/0ebdad302c5a47e8db14c72bf5527927/report-infographic-full.png, small]" alt="Datica Innovation Report">
+                <img data-interchange="[https://images.ctfassets.net/189dvqdsjh46/6ycPF4EFqMcoOWegYGKaKC/0ebdad302c5a47e8db14c72bf5527927/report-infographic-full.png, small]" alt="Datica Innovation Report">
                 <button class="close-button" data-close aria-label="Close reveal" type="button">
                     <span aria-hidden="true">&times;</span>
                 </button>
