--- a/source/seldon/dhsf-full.html.erb
+++ b/source/seldon/dhsf-full.html.erb
@@ -194,7 +194,7 @@ hide_from_sitemap: true
                 </div>
                 <div class="group text-center">
                     <a href="https://datica.com/guide/digital-health-success-framework-ebook/" title="Download your ebook">
-                        <img src="https://images.contentful.com/189dvqdsjh46/2q4JydYcuAgSQ6SKmy88US/47ce92d94666f955ab2ef252297fa838/dhsf-report-preview.png?w=500" alt="DHSF Ebook" class="group">
+                        <img src="https://images.ctfassets.net/189dvqdsjh46/2q4JydYcuAgSQ6SKmy88US/47ce92d94666f955ab2ef252297fa838/dhsf-report-preview.png?w=500" alt="DHSF Ebook" class="group">
                     </a>
                     <a class="button hollow" href="/guide/digital-health-success-framework-ebook/" title="Download your ebook">Get your free DHSF ebook today</a>
                 </div>
