--- a/source/seldon/recent-entries.html.erb
+++ b/source/seldon/recent-entries.html.erb
@@ -20,8 +20,8 @@ hide_from_sitemap: true
                     <div class="callout group callout--large">
                         <p class="blog-date">Blog Generic Share Image</p>
                         <p>
-                            <img src="https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png?w=520" width="310">
-                            <textarea cols="30">https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png?w=520</textarea>
+                            <img src="https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png?w=520" width="310">
+                            <textarea cols="30">https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png?w=520</textarea>
                         </p>
                     </div>
                     <h2 class="headline-2 text-center group">Blog Post Samples</h2>
@@ -75,13 +75,13 @@ hide_from_sitemap: true
                         <div class="callout group callout--large">
                             <p class="blog-date">Podcast Generic Share Image</p>
                             <p>
-                                <img src="https://images.contentful.com/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/4e0140e8f981742be948e84cdd687970/podcast-art-share-h.jpg?w=520" width="310">
-                                <textarea>https://images.contentful.com/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/4e0140e8f981742be948e84cdd687970/podcast-art-share-h.jpg?w=520</textarea>
+                                <img src="https://images.ctfassets.net/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/4e0140e8f981742be948e84cdd687970/podcast-art-share-h.jpg?w=520" width="310">
+                                <textarea>https://images.ctfassets.net/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/4e0140e8f981742be948e84cdd687970/podcast-art-share-h.jpg?w=520</textarea>
                             </p>
                             <p class="blog-date">Show Image</p>
                             <p>
-                                <img src="https://images.contentful.com/189dvqdsjh46/3d9wcnPdhm4mQA4a4Y4WMK/51232bdb711f16512d03b250a9bb422e/HI_Podcast_Poster_2017_No.3__new_look_Q3_-512px.jpg?w=240" width="140">
-                                <textarea>https://images.contentful.com/189dvqdsjh46/3d9wcnPdhm4mQA4a4Y4WMK/51232bdb711f16512d03b250a9bb422e/HI_Podcast_Poster_2017_No.3__new_look_Q3_-512px.jpg?w=240</textarea>
+                                <img src="https://images.ctfassets.net/189dvqdsjh46/3d9wcnPdhm4mQA4a4Y4WMK/51232bdb711f16512d03b250a9bb422e/HI_Podcast_Poster_2017_No.3__new_look_Q3_-512px.jpg?w=240" width="140">
+                                <textarea>https://images.ctfassets.net/189dvqdsjh46/3d9wcnPdhm4mQA4a4Y4WMK/51232bdb711f16512d03b250a9bb422e/HI_Podcast_Poster_2017_No.3__new_look_Q3_-512px.jpg?w=240</textarea>
                             </p>
                         </div>
                 </div>
