--- a/source/academy/index.html.erb
+++ b/source/academy/index.html.erb
@@ -5,7 +5,7 @@ author: "Datica, Inc."
 tags: "training, education, HIPAA, HL7, FHIR, interoperability, EHR, integration, resource"
 date: "January 1, 2017"
 ogType: "article"
-share_image: "https://images.contentful.com/189dvqdsjh46/n9pqHc4Xp62uUSwciEe4C/ead1ba4e14e45c06639c5dea3d47b8ac/datica-academy-notebook-share.jpg?w=1200"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/n9pqHc4Xp62uUSwciEe4C/ead1ba4e14e45c06639c5dea3d47b8ac/datica-academy-notebook-share.jpg?w=1200"
 layout: "basic"
 customCSS: "academy"
 customJS: "/public/js/academy.js"
