--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -4,7 +4,7 @@ summary: "A collection of blog articles from Datica team members"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "January 1, 2017"
-share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 layout: basic
 customCSS: "blog"
 ---
@@ -24,7 +24,7 @@ customCSS: "blog"
         <% if post.has_key?("featured_image") %>
             <div class="container-image-fill" data-interchange="[<%= post["featured_image"]["url"] + image_featured_small %>, small], [<%= post["featured_image"]["url"] + image_featured_large %>, medium]">
         <% else %>
-            <div class="container-image-fill" data-interchange="[https://images.contentful.com/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg, medium]">
+            <div class="container-image-fill" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg, medium]">
         <% end %>
             <section class="section-article container-color--tint-70">
                 <div class="row">
