--- a/source/careers.html.erb
+++ b/source/careers.html.erb
@@ -4,7 +4,7 @@ summary: "Open job positions and hiring information at Datica"
 author: "Datica, Inc."
 tags: "careers, training, education, HIPAA, HL7, FHIR, interoperability, EHR, integration, resource"
 date: "January 1, 2017"
-share_image: "https://images.contentful.com/189dvqdsjh46/3F7pN27NuUcoCsKYAoCsMK/9ef68ed5d5376797554288293baaa5df/datica-careers-share-color.jpg?w=800"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/3F7pN27NuUcoCsKYAoCsMK/9ef68ed5d5376797554288293baaa5df/datica-careers-share-color.jpg?w=800"
 layout: "company"
 ---
 <style type="text/css">
@@ -14,7 +14,7 @@ layout: "company"
         font-family: "GT-America", "Roboto", sans-serif;
     }
 </style>
-<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.contentful.com/189dvqdsjh46/XrCee61laEeWoWoS6CAcI/87fd440f962b520710059ad071b869cb/background-events.jpg, small]">
+<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/XrCee61laEeWoWoS6CAcI/87fd440f962b520710059ad071b869cb/background-events.jpg, small]">
     <div class="row align-center">
         <div class="columns small-12 large-8 text-center">
             <h4 class="headline-6 subheader--spaced-out text--yellow-glow">Careers</h4>
@@ -38,9 +38,9 @@ layout: "company"
 <section class="section-article container-gray-12">
     <div class="row align-middle align-center">
         <div class="columns small-12 medium-5">
-            <img class="group" src="https://images.contentful.com/189dvqdsjh46/1317Z506pieQaAIqmuMKK6/eec0c0a27e665c79a3a4f0be30db6b72/company-3.jpg?fit=crop&w=800&h=360" alt="Madison, WI" />
-            <img class="group" src="https://images.contentful.com/189dvqdsjh46/7ugfd60MRa2o4uqy4CiGyS/5b2b8be926c820195ecdd74c424e569a/company-4.jpg?w=800" alt="Datica Company Photo" />
-            <img class="group" src="https://images.contentful.com/189dvqdsjh46/4KnuEp6gDe2MwOIqIKuKUk/66b11ef15d7a8bcc0dd174a6a5279043/datica_team_-_hall_chat_2_P1040676.jpg" alt="Datica Company Photo" />
+            <img class="group" src="https://images.ctfassets.net/189dvqdsjh46/1317Z506pieQaAIqmuMKK6/eec0c0a27e665c79a3a4f0be30db6b72/company-3.jpg?fit=crop&w=800&h=360" alt="Madison, WI" />
+            <img class="group" src="https://images.ctfassets.net/189dvqdsjh46/7ugfd60MRa2o4uqy4CiGyS/5b2b8be926c820195ecdd74c424e569a/company-4.jpg?w=800" alt="Datica Company Photo" />
+            <img class="group" src="https://images.ctfassets.net/189dvqdsjh46/4KnuEp6gDe2MwOIqIKuKUk/66b11ef15d7a8bcc0dd174a6a5279043/datica_team_-_hall_chat_2_P1040676.jpg" alt="Datica Company Photo" />
             <p class="text-center">
                 <iframe frameborder='0' height='225px' src='https://app.tinypulse.com/happiness_badges/9f32d88ccff431ab5f9d67ce35cf7405' width='235px'>
                 </iframe>
