--- a/source/contentful_templates/press_release.html.erb
+++ b/source/contentful_templates/press_release.html.erb
@@ -73,7 +73,7 @@ end
         <div class="columns small-12 large-3">
                 <div class="media-object card-person">
                     <div class="media-object-section">
-                        <img src="//images.contentful.com/189dvqdsjh46/FV6bMibcoS6KucswgSCec/9b32170214c6c1f3b0c967183c6ac9e6/prof-marcia.jpg" class="avatar avatar--medium circle" alt="Marcia Noyes">
+                        <img src="//images.ctfassets.net/189dvqdsjh46/FV6bMibcoS6KucswgSCec/9b32170214c6c1f3b0c967183c6ac9e6/prof-marcia.jpg" class="avatar avatar--medium circle" alt="Marcia Noyes">
                     </div>
                     <div class="media-object-section main-section align-self-middle">
                         <h4 class="person-name">Marcia Noyes</h4>
