--- a/source/events/index.html.erb
+++ b/source/events/index.html.erb
@@ -4,7 +4,7 @@ summary: "Tracking our participation in events throughout healthcare."
 customCSS: "about-us"
 author: "Datica, Inc."
 tags: "events, conferences, presentations, training, education"
-share_image: "https://images.contentful.com/189dvqdsjh46/2HzxmY3I4ESUU6ICM0ge0Y/f5ed3801dfe3328ec1ee09ea83434ba6/events-share-default.jpg"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/2HzxmY3I4ESUU6ICM0ge0Y/f5ed3801dfe3328ec1ee09ea83434ba6/events-share-default.jpg"
 layout: company
 ---
 <% 
@@ -14,7 +14,7 @@ current_page.data.date = today.strftime('%B %-d, %Y')
 sorted_events = data.site.events.to_a.sort_by{ |id, event| event['date_start'] }.reverse!
 %>
 
-<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.contentful.com/189dvqdsjh46/XrCee61laEeWoWoS6CAcI/87fd440f962b520710059ad071b869cb/background-events.jpg, small]">
+<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/XrCee61laEeWoWoS6CAcI/87fd440f962b520710059ad071b869cb/background-events.jpg, small]">
     <div class="row align-center">
         <div class="columns small-12 large-8 text-center">
             <h4 class="headline-6 subheader--spaced-out text--yellow-glow">Events</h4>
