--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -83,13 +83,13 @@ section.container-gray-10.section-article
             |  Mar. 5 – Mar. 9, 2018
           p
             a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18"
-              img class="logo-size--medium" src="//images.contentful.com/189dvqdsjh46/BejYKjLiuWuE0iEK6WQIM/521488e52b97804bab49f7dd0a1994e2/himss-2018-logo.png?w=300" alt="Event Logo"
+              img class="logo-size--medium" src="//images.ctfassets.net/189dvqdsjh46/BejYKjLiuWuE0iEK6WQIM/521488e52b97804bab49f7dd0a1994e2/himss-2018-logo.png?w=300" alt="Event Logo"
           p
             | Datica will have an exciting announcement for our platform at HIMSS this year. 
             a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18" Stop by our booth #5077 
             | to hear the news. 
         a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18"
-          img src="https://images.contentful.com/189dvqdsjh46/FPuVgZwr02yGkmCswWegw/216aeb7c46c57801b6de8c06e37e885f/Meet_at_himss_18_widget_art.jpg?w=1000" alt="schedule a time to meet at HIMSS'18"
+          img src="https://images.ctfassets.net/189dvqdsjh46/FPuVgZwr02yGkmCswWegw/216aeb7c46c57801b6de8c06e37e885f/Meet_at_himss_18_widget_art.jpg?w=1000" alt="schedule a time to meet at HIMSS'18"
     - sorted_posts.take(1).each do | id, blog_entry |
       .column
         = partial "partials/cards/featured-blog", :locals => { :post => blog_entry, :style => "light", :size => "small", :show_type => true }
@@ -110,7 +110,7 @@ section.container-gray-10.section-article
             a.text-center href="/innovation/#{report_entry.slug}" title=("Read report")
               img alt="report" src="#{report_entry.image_thumb.url}?fit=thumb&w=800" style="padding: 0 1rem 0 1rem;" /
 
-aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop?fit=crop&w=1600&h=500, medium]"
+aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.ctfassets.net/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop?fit=crop&w=1600&h=500, medium]"
   .row.align-center
     .columns.small-12.medium-10.large-10.text-center
       h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
