--- a/source/partials/section-promos/_report-heart-of-medicine.erb
+++ b/source/partials/section-promos/_report-heart-of-medicine.erb
@@ -1,8 +1,8 @@
 <%
 if defined?(:style) && style == "dark"
-    bgImage = "https://images.contentful.com/189dvqdsjh46/1jodnmVv0M6mq884U2k66O/2038cf304612e1b9de5a5663801a0569/report-infographic-bg-gradient-large.jpg"
+    bgImage = "https://images.ctfassets.net/189dvqdsjh46/1jodnmVv0M6mq884U2k66O/2038cf304612e1b9de5a5663801a0569/report-infographic-bg-gradient-large.jpg"
 else
-    bgImage = "https://images.contentful.com/189dvqdsjh46/281h3pkZSouk8060u4YKCi/4b55a1ebf96024b34ebe0be6c562c3c3/report-infographic-banner-bg.jpg"
+    bgImage = "https://images.ctfassets.net/189dvqdsjh46/281h3pkZSouk8060u4YKCi/4b55a1ebf96024b34ebe0be6c562c3c3/report-infographic-banner-bg.jpg"
 end
 %>
 <section class="section-article container-image--center container-color--gray-light" data-interchange="[[<%= bgImage %><%= image_featured_small %>, small], [<%= bgImage %><%= image_featured_medium %>, medium], [<%= bgImage %><%= image_featured_large %>, large]]">
