--- a/source/partials/section-promos/_tco-guide-ribbon.erb
+++ b/source/partials/section-promos/_tco-guide-ribbon.erb
@@ -8,7 +8,7 @@ end
 <section class="section-article--med container-image--center container-gray-<%= grayValue %>" <% if defined?(bgImage) ? bgImage : '' %> data-interchange="[<%= bgImage %><%= image_featured_medium %>, medium], [<%= bgImage %><%= image_featured_large %>, large]"<% end %>>
     <div class="row align-center">
         <div class="columns small-12 medium-1 large-1 text-center">
-            <img class="inject-me svg-color--white icon-size--large" src="https://images.contentful.com/189dvqdsjh46/5dBpkaAOdiW6QEuYqqeEGm/f30e250375d388a03d734ec483cf0ee8/icon-dollar-circle.svg" alt="Total Cost of Ownership icon">
+            <img class="inject-me svg-color--white icon-size--large" src="https://images.ctfassets.net/189dvqdsjh46/5dBpkaAOdiW6QEuYqqeEGm/f30e250375d388a03d734ec483cf0ee8/icon-dollar-circle.svg" alt="Total Cost of Ownership icon">
         </div>
         <div class="columns small-12 medium-9 large-6">
             <h2 class="headline-3">Total Cost of Ownership of Compliance in the Cloud</h2>
