--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -43,7 +43,7 @@ section.section-article.container-color--dark-alt
       h2.headline-3.group.text-center.spaced-out Understanding Shared Responsibility
   .row
     .columns.small-12
-      img.group alt=("Shared Responsibility") src="https://images.contentful.com/189dvqdsjh46/1mArNk3AccoEASMwSGkYsa/d92f9e24098115f59e54b9232f795287/shared-responsibility-model-2x.png" /
+      img.group alt=("Shared Responsibility") src="https://images.ctfassets.net/189dvqdsjh46/1mArNk3AccoEASMwSGkYsa/d92f9e24098115f59e54b9232f795287/shared-responsibility-model-2x.png" /
   .row.align-center
     .columns.small-12.medium-5
       .callout.callout--dark-alpha
@@ -88,7 +88,7 @@ section.section-article.container-gray-12
         [HITRUST](/discover/hitrust) is the most important prescriptive compliance framework in healthcare. It helps give enterprises assurances that they can use the cloud as if compliance didn't exist, while giving digital health companies a shortcut to credibility.
   .row.align-center.group
     .columns.small-12.large-12
-      img.img-crisp alt="platform-controls-diagram" data-interchange="[https://images.contentful.com/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png?w=640, small], [https://images.contentful.com/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png, medium]"
+      img.img-crisp alt="platform-controls-diagram" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png?w=640, small], [https://images.ctfassets.net/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png, medium]"
 
 section.section-article
   .row.group.align-center
@@ -99,7 +99,7 @@ section.section-article
       p.lead Good practices for Life Sciences on the Cloud
   .row.align-center
     .columns.small-12.medium-6.large-4.medium-order-2
-      img.group.logo-size--xlarge alt=("GDPR Ready") src="https://images.contentful.com/189dvqdsjh46/6L09pVF6a4uAY00QMqSOYg/a99648672cbc3279925bf2fa7e146fd6/gdpr-ready-badge-text.png" /
+      img.group.logo-size--xlarge alt=("GDPR Ready") src="https://images.ctfassets.net/189dvqdsjh46/6L09pVF6a4uAY00QMqSOYg/a99648672cbc3279925bf2fa7e146fd6/gdpr-ready-badge-text.png" /
     .columns.small-12.medium-6.large-6
       markdown:
         The European Union has created a new authoritative regulation on consumer data called GDPR. Fines start being handed out on May 25th, 2018. The regulation applies to all EU citizens regardless of service or where the data lives. Protected Health Information (PHI) is scoped within GDPR, so any healthcare organization who might service European Union citizens will be affected by it.
@@ -119,7 +119,7 @@ section.section-article
 
         [Learn more about GxP](/academy/gxp-and-business-associates-does-it-exist-like-hipaa).
     .columns.small-12.medium-6.large-4
-      img.group.logo-size--xlarge alt=("GxP Ready") src="https://images.contentful.com/189dvqdsjh46/1MTvqDED4USkYYE8S2eSwU/3d8116969c0142abfc77f74e34594155/gxp-badge.png" /
+      img.group.logo-size--xlarge alt=("GxP Ready") src="https://images.ctfassets.net/189dvqdsjh46/1MTvqDED4USkYYE8S2eSwU/3d8116969c0142abfc77f74e34594155/gxp-badge.png" /
 
 .container-color--gray-light
   section.section-article
@@ -136,7 +136,7 @@ section.section-article
           p I think this could be revolutionary in helping the industry as a whole collaborate to improve privacy and security practices by gathering information from the highest level security/privacy experts in the field and making it available via similar open source methods.”
         .media-object.card-person
           .media-object-section
-            img.avatar.avatar--large.circle alt=("Katelyn Gleason") src="https://images.contentful.com/189dvqdsjh46/2gYOoWVhOEYW4IMAOIeyS0/599f8ca6d3642c732f3f003769563781/headshot-eligible.jpg?w=128" /
+            img.avatar.avatar--large.circle alt=("Katelyn Gleason") src="https://images.ctfassets.net/189dvqdsjh46/2gYOoWVhOEYW4IMAOIeyS0/599f8ca6d3642c732f3f003769563781/headshot-eligible.jpg?w=128" /
           .media-object-section.main-section.align-self-middle
             h4.person-name Katelyn Gleason
             p.person-title CEO &amp; Cofounder, Eligible Inc.
@@ -148,7 +148,7 @@ section.section-article
           p Do you handle PHI and not yet have your own company policies in place? Then you’ll find our content useful.
           = partial "partials/snippets/button", :locals => { :label => "Policies Overview", :url => "/open-source/policies", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue" }
 
-aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]"
+aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.ctfassets.net/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]"
   .row.align-center
     .columns.small-12.medium-10.large-10.text-center
       h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
