--- a/source/platform/success.html.erb
+++ b/source/platform/success.html.erb
@@ -44,7 +44,7 @@ collectionOrder: 4
     :locals => {
         :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS",
         :container_color => "container-gray-12"
-        #:background => "https://images.contentful.com/189dvqdsjh46/55EpUazd5CQSqC66CaWYqI/fd3aa1534d8d641ee8bd60d3592e98a3/aws-mlh-diagram-k-alpha.png"
+        #:background => "https://images.ctfassets.net/189dvqdsjh46/55EpUazd5CQSqC66CaWYqI/fd3aa1534d8d641ee8bd60d3592e98a3/aws-mlh-diagram-k-alpha.png"
     }
 %>
     <section class="section-article--med container-gray-11">
@@ -209,7 +209,7 @@ collectionOrder: 4
     </div>
 </section>
 
-<section id="ctaBottom" class="section-article container-color--blue-bright-noise container-image--center" data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]">
+<section id="ctaBottom" class="section-article container-color--blue-bright-noise container-image--center" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]">
     <div class="row align-center">
         <div class="columns small-12 medium-10 text-center">
             <h2 class="headline-3 group"><strong>End-to-end compliance</strong> on AWS and Azure is possible.</h2>
