--- a/source/press/index.html.erb
+++ b/source/press/index.html.erb
@@ -4,13 +4,13 @@ summary: "Datica press releases, announcements, media coverage, and contact info
 author: "Datica, Inc."
 tags: "media, press releases, press, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "January 1, 2017"
-share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 header: "Media Resources"
 subheader: "Company Info, Press Releases, Coverage"
 layout: company
 ---
 
-<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.contentful.com/189dvqdsjh46/3zZ0FS37NuWEagqyQuoowQ/700afbf86e486e4d251bf816448719e7/background-press.jpg, small]">
+<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/3zZ0FS37NuWEagqyQuoowQ/700afbf86e486e4d251bf816448719e7/background-press.jpg, small]">
     <div class="row align-center">
         <div class="columns small-12 large-6 text-center">
             <h4 class="headline-6 subheader--spaced-out text--yellow-glow">Press</h4>
@@ -23,7 +23,7 @@ layout: company
         <div class="columns small-12 medium-3 large-3">
             <div class="media-object card-person">
                 <div class="media-object-section">
-                    <img src="//images.contentful.com/189dvqdsjh46/FV6bMibcoS6KucswgSCec/9b32170214c6c1f3b0c967183c6ac9e6/prof-marcia.jpg" class="avatar avatar--medium circle" alt="Marcia Noyes">
+                    <img src="//images.ctfassets.net/189dvqdsjh46/FV6bMibcoS6KucswgSCec/9b32170214c6c1f3b0c967183c6ac9e6/prof-marcia.jpg" class="avatar avatar--medium circle" alt="Marcia Noyes">
                 </div>
                 <div class="media-object-section main-section align-self-middle">
                     <h4 class="person-name">Marcia Noyes</h4>
