--- a/source/seldon/components-people.html.erb
+++ b/source/seldon/components-people.html.erb
@@ -11,7 +11,7 @@ hide_from_sitemap: true
             <div class="group">
                 <h1 class="headline-2">Example of person-card in an article</h1>
                 <div class="person-card--vertical float-right-on-medium">
-                    <img class="avatar circle" src="//images.contentful.com/189dvqdsjh46/4gVcDm2n5SGuS46wUI4eM/eba5483e34263e500f2278f80e82e881/laleh.jpg">
+                    <img class="avatar circle" src="//images.ctfassets.net/189dvqdsjh46/4gVcDm2n5SGuS46wUI4eM/eba5483e34263e500f2278f80e82e881/laleh.jpg">
                     <div class="person-card--caption">
                         <div class="person-name">Laleh Hassibi</div>
                         <div class="person-title">Director of Content Marketing</div>
@@ -23,7 +23,7 @@ hide_from_sitemap: true
                 <p>The person widget below example code, for use within Contentful:</p>
 <textarea>
 &lt;div class=&quot;person-card--vertical float-right-on-medium&quot;&gt;
-    &lt;img class=&quot;avatar circle&quot; src=&quot;//images.contentful.com/[hash]/laleh.jpg&quot;&gt;
+    &lt;img class=&quot;avatar circle&quot; src=&quot;//images.ctfassets.net/[hash]/laleh.jpg&quot;&gt;
     &lt;div class=&quot;person-card--caption&quot;&gt;
         &lt;div class=&quot;person-name&quot;&gt;Laleh Hassibi&lt;/div&gt;
         &lt;div class=&quot;person-title&quot;&gt;Director of Content Marketing&lt;/div&gt;
