--- a/source/seldon/typography.html.erb
+++ b/source/seldon/typography.html.erb
@@ -120,7 +120,7 @@ hide_from_sitemap: true
                 <p>Use <code>.no-margin</code> on a header (or anything) to set <code>margin-bottom: 0</code>. The company that unlocked the problem of securely hosting healthcare data in the cloud changes its name to better reflect its core focus during an industry transformation.</p>
             </div>
             <div class="person-card--vertical float-right-on-medium">
-                <img class="avatar circle" src="//images.contentful.com/189dvqdsjh46/4gVcDm2n5SGuS46wUI4eM/eba5483e34263e500f2278f80e82e881/laleh.jpg">
+                <img class="avatar circle" src="//images.ctfassets.net/189dvqdsjh46/4gVcDm2n5SGuS46wUI4eM/eba5483e34263e500f2278f80e82e881/laleh.jpg">
                 <div class="person-card--caption">
                     <div class="person-name">Laleh Hassibi</div>
                     <div class="person-title">Director of Content Marketing</div>
