--- a/source/whitepapers/index.html.erb
+++ b/source/whitepapers/index.html.erb
@@ -4,7 +4,7 @@ summary: "Industry insight on compliance, HIPAA, and cloud computing for healthc
 author: "Datica, Inc."
 tags: "training, education, HIPAA, HL7, FHIR, interoperability, EHR, integration, resources"
 date: "January 1, 2017"
-share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 layout: "basic"
 customCSS: "blog"
 ---
