--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -15,14 +15,13 @@ priority: "0.9"
 - current_page.data.share_image = image_share_platform
 
 .container-color--dark-grad-blue
-  section.section-article
+  section.section-article.position-relative
     .row.align-middle
-      .columns.small-12.medium-5
+      .columns.small-12.medium-large-6
         h1.headline-2 End-to-end compliance on AWS and Azure is possible.
         p.small The Datica Platform fills the compliance gaps on top of public clouds like AWS and Azure by combining the best technology available and mapping it to frameworks like HIPAA, HITRUST, GDPR, and GxP. Customers use Kubernetes-enabled orchestration to deploy containerized workloads to the Platform that <strong>are guaranteed to be continuously compliant</strong>.
         = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/technology", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white" }
-      .columns.small-12.medium-7
-        img.float-right-on-medium alt=("Datica Platform Architecture") src="https://images.ctfassets.net/189dvqdsjh46/6vT9Mx9TlmoEAiGcOkwG24/b4f31fda3c1b6fcd6aeb5f926ce3979a/platform_iso_architecture-2x.png"
+    img.position-bottom-rt(src="/public/img/art/platform-iso-illustration.svg" alt="Datica Platform illustration")
 
 .container-color--gray-light
   .container-image--fixed(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/31Xr7kD9GUu8gYo6IOISac/b72aedc4ed520f1ad4ae78a24109838f/bg-weave-light.png?w=2200&h=1000&fm=jpg, large]")
